<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MIRAE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="View_Users">Zobacz użytkowników</string>
    <string name="Add_User">Dodaj nowego użytkownika</string>
    <string name="title_activity_all_users">AllUsersActivity</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="PESEL">PESEL</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="SaveChanges">Zapisz</string>
    <string name="Delete">Usuń</string>
    <string name="CreateNew">Dodaj do bazy</string>
    <string name="Edit_User">Edytuj użytkownika</string>
    <string name="PickADate">Wybierz datę</string>
    <string name="Reserve">Rezerwuj</string>
    <string name="DajPESEL">Proszę podać PESEL</string>
    <string name="btnContinue">Dalej</string>
    <string name="Enter">Rejestrowanie wizyty</string>
    <string name="Symptomy">Symptomy i inne uwagi do lekarza</string>
    <string name="Email">Email</string>
    <string name="txtInputQuestion">Proszę podać symptomy oraz inne uwagi do lekarza</string>
    <string name="speech_not_supprted">Przepraszamy! Twoje urządzenie nie wspiera wprowadzania tekstu za pomocą mowy :(</string>
    <string name="tap_on_mic">Naciśnij na mikrofon by rozpocząć</string>
    <string name="ProgressDialogEdit">Ładowanie danych. Proszę czekać...</string>
    <string name="ProgressDialogPickADate">Zapisywanie daty</string>
    <string name="ProgressDialogMainScreen">Wyszukiwanie użytkownika o podanym nr PESEL</string>
    <string name="ProgressDialogSaveUser">Zapisywanie danych użytkownika...</string>
    <string name="ProgressDialogDeletingUser">Usuwanie wpisu...</string>
    <string name="ProgressDialogAddSymptoms">Proszę czekać</string>
    <string name="PorgressDialogCreatingUser">Tworzenie wpisu...</string>
    <string name="ProgressDialogLoadingUsers">Ładowanie danych. Proszę czekać...</string>
    <string name="TAG_ADDRESS">address</string>
    <string name="TAG_SUCCESS">success</string>
    <string name="TAG_PATIENT">patient</string>
    <string name="TAG_NAME">name</string>
    <string name="TAG_SURNAME">surname</string>
    <string name="TAG_PESEL">pesel</string>
    <string name="TAG_PHONE">phone</string>
    <string name="TAG_EMAIL">email</string>
    <string name="TAG_APPOINTMENTS">appointments</string>
    <string name="TAG_SYMPTOMS">symptoms</string>
    <string name="TAG_ID">id</string>
    <string name="TAG_MED_ID">med_id</string>
    <string name="TAG_ROOM_ID">room_id</string>
    <string name="TAG_PRICE">price</string>
    <string name="TAG_START_TIME">start_time</string>
    <string name="TAG_MEDS">meds</string>
    <string name="TAG_Message">message</string>
    <string name="url_queue">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/add_to_queue.php</string>
    <string name="id_string">ID wizyty</string>
    <string name="med_id_string">ID Lekarza</string>
    <string name="room_id_string">Nr pokoju</string>
    <string name="price_string">Cena wizyty</string>
    <string name="start_time_string">Czas rozpoczęcia wizyty</string>
    <string name="meds_string">Przepisane leki</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="brak_danych">--brak danych--</string>
    <string name="Visits">Wizyty</string>
    <string name="name_hint">Jan</string>
    <string name="TAG_POSITION">position</string>
    <string name="surname_hint">Kowalski</string>
    <string name="pesel_hint">93011312251</string>
    <string name="phone_hint">793766808</string>
    <string name="address_hint">Pomorska 2</string>
    <string name="start_t">Początek wizyty</string>
    <string name="end_t">Koniec wizyty</string>
    <string name="btnVisits">Zobacz swoje wizyty</string>
    <string name="url_user_details">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/get_user_details.php</string>
    <string name="url_user_queue">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/get_queue_position.php</string>
    <string name="url_update_user">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/update_user.php</string>
    <string name="url_delete_user">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/delete_user.php</string>
    <string name="url_create_patient">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/new_user.php</string>
    <string name="url_add_symptoms">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/add_symptoms.php</string>
    <string name="url_visits">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/get_appointment_details.php</string>
    <string name="url_reserve">http://pluton.kt.agh.edu.pl/~aniedzialkowski/mirae_php_scripts/new_appointment.php</string>


</resources>
