<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2">
    <LinearLayout
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
    <!-- name Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/czerwony"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="25sp"/>

    <!-- Edit name -->
    <EditText android:id="@+id/editNAME"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:hint="@string/name_hint"
        android:singleLine="true"
        android:textColor="@color/zolty"
        android:textSize="25sp"
        android:inputType="textPersonName"/>

    <!-- Surname Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Surname"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textColor="@color/czerwony"
        android:textSize="25sp"/>

    <!-- edit Surname -->
    <EditText android:id="@+id/editSURNAME"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:textColor="@color/zolty"
        android:textSize="25sp"
        android:singleLine="true"
        android:inputType="textPersonName"/>

    <!-- PESEL Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/PESEL"
        android:textColor="@color/czerwony"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="25sp"/>

    <!-- edit PESEL -->
    <EditText android:id="@+id/editPESEL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:hint="@string/pesel_hint"
        android:singleLine="true"
        android:textColor="@color/zolty"
        android:textSize="25sp"
        android:inputType="numberDecimal"/>

    <!-- Phone Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textColor="@color/czerwony"
        android:textSize="25sp"/>

    <!-- edit Phone -->
    <EditText android:id="@+id/editPHONE"
        android:layout_width="fill_parent"
        android:hint="@string/phone_hint"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:textColor="@color/zolty"
        android:textSize="25sp"
        android:singleLine="true"
        android:inputType="phone"/>

    <!-- Address Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textColor="@color/czerwony"
        android:textSize="25sp"/>

    <!-- Input Address -->
    <EditText android:id="@+id/editADDRESS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress"
        android:layout_marginBottom="15dip"
        android:textColor="@color/zolty"
        android:textSize="25sp"
        android:singleLine="true"/>
    <!-- EMAIL Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textColor="@color/czerwony"
        android:textSize="25sp"/>

    <!-- Input Email -->
    <EditText android:id="@+id/editEMAIL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:layout_marginBottom="15dip"
        android:hint="@string/email_hint"
        android:textColor="@color/zolty"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:singleLine="true"/>


    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout2">
        <!-- Button Create User -->
        <Button android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/SaveChanges" />

        <!-- Button Delete Product -->
        <Button android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/Delete" />
        </LinearLayout>

    </RelativeLayout>