<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_string"
        android:text="@string/id_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/id_string"
        android:layout_toEndOf="@+id/id_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/med_id_string"
        android:text="@string/med_id_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/med_id"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/med_id_string"
        android:layout_toEndOf="@+id/med_id_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room_id_string"
        android:text="@string/room_id_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/room_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/room_id_string"
        android:layout_toEndOf="@+id/room_id_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price_string"
        android:text="@string/price_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_toRightOf="@+id/price_string"
        android:layout_toEndOf="@+id/price_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_time_string"
        android:text="@string/start_time_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/zolty"
        android:layout_toRightOf="@+id/start_time_string"
        android:layout_toEndOf="@+id/start_time_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meds_string"
        android:text="@string/meds_string"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/meds"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/meds_string"
        android:layout_toEndOf="@+id/meds_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/symptoms_string"
        android:text="@string/Symptomy"
        android:textColor="@color/czerwony"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/symptoms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/symptoms_string"
        android:layout_toEndOf="@+id/symptoms_string"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/zolty"
        android:textSize="17sp"
        android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>