<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:weightSum="1">

    <DatePicker

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:layout_gravity="center"
        android:id="@+id/datePicker"
        android:layout_weight="0.14"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/dark_gray"
            android:layout_weight=".5"
            android:text="@string/start_t"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/dark_gray"
            android:layout_weight=".5"
            android:text="@string/end_t"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.14">
    <TimePicker
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:clickable="false" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/timePicker2"
        android:clickable="false" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:text="@string/Reserve"
        android:id="@+id/btnReserve"
        android:textColor="@color/white"
        android:layout_marginRight="2dp"
        android:layout_weight="0.5"
        android:background="@color/dark_gray" />

    <Button
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="2dp"
        android:text="Kolejka"
        android:id="@+id/btnQueue"
        android:textColor="@color/white"
        android:background="@color/dark_gray" />
    </LinearLayout>

</LinearLayout>